# yolov5-face

./: pyproject.toml
.github/workflows/: publish_to_pypi.yml
yolov5_face/: detect_face.py
