[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolov5-face"
version = "0.0.1-alpha.1"
description = "Real-time face detection using YOLOv5 - Forked Version"
readme = "README.md"
license = {text = "GPL-3.0"}

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]
